v1.4 - TBD
  Made ADDSynth Materials into its own mod.

v1.3.4 - December 28, 2020
  Major code optimizations and maintenance.
  Fix Laser Distance or Energy not saving on world reload.
  Energy stored in Batteries is now balanaced across all batteries on the
    Energy Network.
  Fixed several errors with the Universal Energy Interface.
  Batteries that are removed now redistribute any leftover energy to other
    connected batteries.
  Fix Universal Energy Interface not depositing energy into Energy
    Storage Containers.
  Fix machines receiving double energy if you had an Energy Storage Container
    on your energy network.
  You can now specify the Laser maximum receive variable in the config.
  Fixed a rare crash that would occur if you reloaded the world while a machine
    was working on its last item.
  Fix message telling players the black hole is not allowed in this dimension
    was displaying twice. - Error since v1.3.
  Added an alternate crafting recipe for the Fusion Energy Converter.
  Fixed a few recipe advancements not working. But nobody cares about that.



v1.3.3 - October 13, 2020
  Fixed Inverter crash. sigh.
  Added an alternate crafting recipe for the Caution Block.
  No longer displays Portal warning message as the Unknown Dimension
    doesn't exist in the 1.14 and 1.15 versions.



v1.3.2 - October 1, 2020
  Energy Suspension Bridge can now overwrite replaceable blocks.
   - Area is no longer considered obstructed if it contains tall grass.
  Advanced Ore Refinery:
   - Now requires 20 seconds to do an operation, twice as long as a Furnace.
   - Now requires 8,000 energy per operation instead of 5,000.
  Fixed block transparency issues:
   - Portal to the Unknown Dimension energy blocks.
   - Energy Storage Container.
   - Energy Suspension Bridge blocks (but only for horizontal bridges)
   - Laser energy blocks.
   - Fusion Energy Structure Laser Beam.
  Added an Auto Shutoff toggle to the Portal Control Panel.