@@ -21,7 +21,7 @@ public final class PortalFrame extends MachineBlock {
 
   public PortalFrame(final String name){
     super(MaterialColor.WOOL);
-    OverpoweredMod.registry.register_block(this, name, new Item.Properties().group(CreativeTabs.machines_creative_tab));
+    OverpoweredMod.registry.register_block(this, name, new Item.Properties().group(CreativeTabs.creative_tab));
   }
 
   @Override
